<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <!--App basics -->
    <string name="app_name">梦响</string>
    
    <!--Login -->
    <string name="login_t">教师登录</string>
    <string name="login_s">学生登录</string>
    <string name="sign_up">注册</string>
    <string name="sign_up_new_account">注册新账户</string>
    <string name="username">用户名</string>
    <string name="username_or_phone">用户名 / 手机号</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="remember_me">记住我的密码</string>
    <string name="browse">让我看看</string>
    <string name="action_settings">Settings</string>
    <string name="mock_logo">Mock logo</string>
    
    <!--Sign up -->
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string-array name="gender_array">
        <item>男</item>
        <item>女</item>
        <item>其他</item>
    </string-array>
    <string name="email">邮件</string>
    <string name="email_example">user@example.com</string>
    <string name="phone">手机号</string>
    <string name="birthdate">出生日期</string>
    <string name="address">地址</string>
    <string name="head_image">Head Image</string>
    
    <!--Homepage -->
    <string name="homepage">首页</string>
    <string name="recommended_teachers">推荐教师</string>
    <string name="recommended_students">推荐学生</string>
    <string name="my_teachers">我的教师</string>
    <string name="my_students">我的学生</string>
    <string name="my_fave_students">我关注的学生</string>
    <string name="my_fave_teachers">我关注的教师</string>
    <string name="my_schedule">我的课程计划</string>
    <string name="calendar_icon">calendar icon</string>
    <string name="teacher_icon">teacher icon</string>
    <string name="student_icon">student icon</string>
    <string name="fave_teacher_icon">favourite teacher icon</string>
    <string name="fave_student_icon">favourite student icon</string>
    <string name="search">search</string>
    
    <!--Profile -->
    <string name="username_eg">李小胖</string>
    <string name="address_eg">北京市</string>
    <string name="interests_eg">琵琶</string>
    <string name="add_to_favourites">关注</string>
    <string name="favourites_icon">favourites icon</string>
    <string name="request_teacher">加为教师</string>
    <string name="request_student">加为学生</string>
    <string name="bio">简介</string>
    <string name="bio_eg">李小胖，琵琶演奏家，专业琵琶教师，立足于对中国传统音乐的理解，演奏的乐曲风格宽泛，
        音乐变化丰富。有十五年的琵琶教学经验，具有高度的工作热情，能够在多方面培养学生对民乐的兴趣和对音乐艺术的热爱。</string>
    <string name="edu">学历</string>
    <string name="edu_eg">1981年毕业于山寨音乐学院民乐系，现山寨音乐学院民乐系副教授。</string>
    <string name="comments">评价</string>
    <string name="no_comments">目前无评价</string>
    <string name="profile_pic">profile picture</string>
    <string name="edit_icon">edit icon</string>
    <string name="add_to_fave_button">add to favourites</string>
    <string name="send_request_button">send request</string>
    
    
    <!--Notifications -->
    <string name="notif">消息</string>
    <string name="incoming_request">您有新的上课请求</string>
    <string name="incoming_request_eg">殷悦 给您发送了上课请求。</string>
    <string name="new_comment">您有新的评价</string>
    <string name="new_comment_eg">刘畅 在您的个人主页上发出新的评价：”老师太帅了“</string>
    <string name="request_success">请求成功</string>
    <string name="request_success_eg">您已确认 刘畅 发出的上课请求！请点此进入课程表。</string>
    <string name="upcoming_lesson">上课提醒</string>
    <string name="upcoming_lesson_eg">提醒：11月2日上午10:30时 与 刘畅 同学上课；课时 60 分钟。</string>
    <string name="payment_success">支付成功</string>
    <string name="payment_success_eg">刘畅 已向您的账户“工商银行”汇入 800.00 RMB,请注意查收。</string>
    <string name="email_verified">邮箱绑定成功</string>
    <string name="email_verified_eg">您的邮箱 lxp1968@example.com 已成功绑定！</string>
    <string name="phone_verified">手机绑定成功</string>
    <string name="phone_verified_eg">您的手机号 (+86)1868 888 0000 已成功绑定！</string>
    <string name="account_verified">认证成功</string>
    <string name="account_verified_eg">恭喜！您的用户已通过认证。</string>
    <string name="user_eg_1">刘畅</string>
    <string name="user_eg_2">殷悦</string>
    <string name="user_message_eg">好，到时候见。别忘了带谱子！</string>
    <string name="time_last_week">上周</string>
    <string name="time_yesterday">昨天</string>
    <string name="time_monday">周一</string>
    <string name="time_tuesday">周二</string>
    <string name="time_wednesday">周三</string>
    <string name="time_thursday">周四</string>
    <string name="time_friday">周五</string>
    <string name="time_saturday">周六</string>
    <string name="time_sunday">周日</string>
    <string name="time_eg_1">下午 3:12</string>
    <string name="time_eg_2">上午 11:48</string>
    <string name="see_details">查看详情  ></string>
    
    <!--Settings -->
    <string name="account">账户</string>
    <string name="account_name">账户</string>
    <string name="account_id">example001</string>
    <string name="about">关于梦响</string>
    <string name="about_us">关于我们</string>
    <string name="keep_logged_in">自动登录</string>
    <string name="add_phone">绑定手机</string>
    <string name="add_email">绑定邮箱</string>
    <string name="not_verified">未绑定</string>
    <string name="change_password">修改账户密码</string>
    <string name="notify_me">新消息提醒</string>
    <string name="vibrate">振动</string>
    <string name="set_volume">音量</string>
    <string name="sign_out">退出</string>
    
    <!--Schedule -->
    <string name="year_2014">2014</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="jan">一月</string>
    <string name="feb">二月</string>
    <string name="mar">三月</string>
    <string name="apr">四月</string>
    <string name="may">五月</string>
    <string name="jun">六月</string>
    <string name="jul">七月</string>
    <string name="aug">八月</string>
    <string name="sep">九月</string>
    <string name="oct">十月</string>
    <string name="nov">十一月</string>
    <string name="dec">十二月</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="sun">日</string>
    <string name="strip">strip</string>
    <string name="today">今日</string>
    <string name="schedule_icon">schedule icon</string>
    <string name="previous_icon">previous icon</string>
    <string name="next_icon">next icon</string>
    <string name="no_events">无计划</string>
    
    
    <!-- Sign up Components -->
    <string name="usrEmpty">请输入用户名</string>
    <string name="pwdEmpty">请输入密码</string>
    <string name="uNameEmpty">请输入您的姓名</string>
    <string name="emailEmpty">请输入您的邮箱</string>
    <string name="phoneEmpty">请输入您的手机号</string>
    <string name="conPwdEmpty">请再次输入您的密码</string>
    <string name="conPwdErr">您两次输入的密码不一致</string>
    <string name="birEmpty">请输入您的年龄</string>
    <string name="addrEmpty">请输入您的地址</string>
    <string name="signupSucess">注册成功</string>
    <string name="loginSucess">登录成功</string>
    <string name="choice">请选择</string>
    <string name="nameLenErr">姓名不足2个字</string>
    <string name="phoneLenErr">请输入正确的手机号</string>
    <string name="pwdLenErr">密码不少于6位</string>
    
    <!-- Main Activity -->
    <string name="pressAgain">再按一次退出程序</string>
    <string name="homePage">首页</string>
    <string name="personalPage">个人主页</string>
    <string name="msgs">消息</string>
    <string name="settings">设置</string>
    
    <!-- Present Profile -->
    <string name="collectSucess">收藏成功</string>
    <string name="submitSucess">提交成功</string>

</resources>
