<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgd_piano"
    android:paddingBottom="2dp"
    android:paddingTop="23dp" >

    <ImageView
        android:id="@+id/mock_logo"
        android:layout_width="wrap_content"
        android:layout_height="169dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mock_logo"
        android:src="@drawable/logo_curly" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4.8dp"
        android:background="@drawable/edit_text_oval"
        android:hint="@string/username_or_phone"
        android:inputType="text"
        android:padding="5.5dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_input"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:background="@drawable/edit_text_oval"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5.5dp" />

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_input"
        android:layout_below="@+id/password_input"
        android:layout_marginBottom="11dp"
        android:checked="false"
        android:text="@string/remember_me"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/login_button_t"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_input"
        android:layout_below="@+id/remember_me"
        android:layout_marginBottom="41dp"
        android:background="@drawable/button_blue"
        android:text="@string/login_t"
        android:textColor="#FFFFFF"
        android:textSize="19sp" />

    <Button
        android:id="@+id/login_button_s"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_input"
        android:layout_below="@+id/remember_me"
        android:layout_marginBottom="41dp"
        android:background="@drawable/button_orange"
        android:text="@string/login_s"
        android:textColor="#FFFFFF"
        android:textSize="19sp" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_input"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:gravity="left"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password_input"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:gravity="right"
        android:text="@string/browse"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>