<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f9f9f9"
        android:padding="9dp" >

        <RelativeLayout
            android:id="@+id/user_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/panel_background"
            android:padding="12dp" >
            
            <ImageButton 
                android:id="@+id/edit_button"
                android:contentDescription="@string/edit_icon"
                android:layout_width="9dp"
                android:layout_height="9dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_edit_dark"/>

            <ImageView
                android:id="@+id/profile_pic"
                android:contentDescription="@string/profile_pic"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_teacher_dark" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@+id/profile_pic"
                android:text="@string/username_eg"
                android:textColor="#0d212b"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/username"
                android:layout_below="@+id/username"
                android:layout_marginTop="5dp"
                android:text="@string/address_eg"
                android:textColor="#a6a6a6"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/interests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/username"
                android:layout_below="@+id/address"
                android:layout_marginTop="5dp"
                android:text="@string/interests_eg"
                android:textColor="#a6a6a6"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bio_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_below="@+id/user_panel"
            android:background="@drawable/panel_background"
            android:padding="12dp" >

            <TextView
                android:id="@+id/bio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:textColor="#0d212b"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bio_title"
                android:text="@string/bio_eg"
                android:textColor="#a6a6a6"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/edu_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_below="@+id/bio_panel"
            android:background="@drawable/panel_background"
            android:padding="12dp" >

            <TextView
                android:id="@+id/edu_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edu"
                android:textColor="#0d212b"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/edu_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edu_title"
                android:text="@string/edu_eg"
                android:textColor="#a6a6a6"
                android:textSize="15sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/comments_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_below="@+id/edu_panel"
            android:background="@drawable/panel_background"
            android:padding="12dp" >

            <TextView
                android:id="@+id/comments_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textColor="#0d212b"
                android:textSize="18sp" />
            
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>