<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    android:orientation="vertical"
    android:padding="9dp" >

    <RelativeLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/panel_background"
        android:padding="12dp" >

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_length="124dp"
            android:contentDescription="@string/profile_pic"
            android:src="@drawable/icon_student_dark" />
        
        <TextView 
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/profile_pic"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="21dp"
            android:text="@string/username_eg"
            android:textColor="#474747"
            android:textSize="21sp" />
        
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_alignLeft="@+id/username"
            android:layout_marginTop="5dp"
            android:text="@string/address_eg"
            android:textColor="#a6a6a6"
            android:textSize="15sp" />
        
        <TextView
            android:id="@+id/interests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address"
            android:layout_alignLeft="@+id/username"
            android:layout_marginTop="5dp"
            android:text="@string/interests_eg"
            android:textColor="#a6a6a6"
            android:textSize="15sp" />
            
    </RelativeLayout>

</LinearLayout>